Revert "新しいライブラリを入れました。"
This reverts commit 3eda879f4137e13905c830f6cb725e764f57e047.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,unity,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,unity,node
 
-#つもりの練習用ファイルを無視したい
+#つもりのファイル、いらんやつ無視したいんや
 prac_flask
 
 ### Node ###
